deployment-files/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-app
        image: kc-app
        ports:
        - containerPort: 4000
        imagePullPolicy: IfNotPresent
